adopt Java 8 toList()